syntax = "proto3";

package pb;
import "status.ext.proto";

service UserServiceExt {
   // 注册用户
   rpc RegistAccount(RegistAccountReq) returns(RegistAccountRsp) {}
   // 用户登录
   rpc LoginAccount(LoginAccountReq) returns(LoginAccountRsp) {}
   // 密码重置
   rpc ResetAccount(ResetAccountReq) returns(ResetAccountRsp) {}
}



message RegistAccountReq {
    string email = 1 ;
    string userName = 2 ;
    string password = 3 ;
}

message RegistAccountRsp {
    Status status = 1 ;
}

message LoginAccountReq {
    string userName = 1 ;
    string password = 2 ;
}

message LoginAccountRsp {
    Status status = 1 ;
}

message ResetAccountReq {

}

message ResetAccountRsp {

}

